[package]
name = "console-runner"
version = "0.1.0"
authors = ["Victor Johnsson <victor.johnsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
logos = "0.12.0"
rand = "0.8.5"

[dev-dependencies]
spectral = "0.6.0"